2008-03-14  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-hintbox.cc:
	* src/gnome-cmd-hintbox.h:
	hintbox: new widget showing a label showing decorated with a GTK_STOCK_DIALOG_INFO icon

2008-03-13  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added GnomeCmdUserActions iterators for accessing registered GdkEventKey

2008-03-11  Piotr Eljasiak  <epiotr@use.pl>

	* libgcmd/libgcmd-widget-factory.c:
	Replacing obsoleted gnome_icon_entry_set_icon() with gnome_icon_entry_set_filename()

2008-03-10  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Moved static DICT<GnomeCmdUserActionFunc> to GnomeCmdUserActions class
	Added descriptions for user action

2008-03-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-commander/src/gnome-cmd-file-popmenu.cc:
	* src/gnome-commander/src/gnome-cmd-list-popmenu.cc:
	* src/gnome-commander/src/gnome-cmd-main-menu.cc:
	* src/gnome-commander/src/gnome-cmd-search-dialog.cc:
	* src/gnome-commander/src/intviewer/viewer-window.cc:
	Replaced deprecated icon names with newer ones

	* src/gnome-cmd-search-dialog.cc:
	Added 'help' button to search dlg

2008-03-04  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-main-win.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	Added "Start GNOME Commander as root" action to menu and user actions

	* src/gnome-cmd-advrename-lexer.ll:
	* src/gnome-cmd-advrename-dialog.cc:
	Multi-Rename-Tool - new $x and $X placeholders for random hexadecimal numbers

2008-02-29  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in: Bumped version to 1.2.6


##############################################################################
#                                   1.2.5                                    #
##############################################################################

2008-02-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc: